Добавление в меню сайта Кнопка магазин

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 			<li><a href="#portfolio" class="menu-element" data-link="portfolio" title="В галерею">Галерея</a></li>
 			<li><a href="contacts.html" class="menu-element"  title="Контактные данные">Контакты</li>
 			<li><a href="blog.html" class="menu-element" title="НАШ БЛОГ">НАШ БЛОГ</a>
-			<li><a href ="gallery.html" class="menu-element" title="Галерия">Галерия</a></li>
+			<li><a href ="gallery.html" class="menu-element" title="Галерия">Галерия</a>
+			<li><a href="shop.html" class="menu-element" title="Магазин">Магазин</a></li>
 
 
 			</ul>
