Обновление меню подвала и бургера

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<li><a href="#services" class="menu-element" data-link="services" title="Общая информация">Общее</a></li>
 			<li><a href="#portfolio" class="menu-element" data-link="portfolio" title="В галерею">Галерея</a></li>
 			<li><a href="contacts.html" class="menu-element"  title="Контактные данные">Контакты</li>
-			<li><a href="blog.html" class="menu-element" title="НАШ БЛОГ">НАШ БЛОГ</a>
+			<li><a href="blog.html" class="menu-element" title="НАШ БЛОГ">Наш блог</a>
 			<li><a href ="gallery.html" class="menu-element" title="Галерия">Галерия</a>
 			<li><a href="shop.html" class="menu-element" title="Магазин">Магазин</a></li>
 
@@ -218,9 +218,12 @@
 		<nav>
 			<ul class="menu" >
 				<li><a href="index.html" class="menu-element" data-link="top" title="На главную">Главная</a></li>
-				<li><a href="#services" class="menu-element" data-link="services" title="На услуги">Информация</a></li>
+				<li><a href="#services" class="menu-element" data-link="services" title="Общая информация">Общее</a></li>
 				<li><a href="#portfolio" class="menu-element" data-link="portfolio" title="В галерею">Галерея</a></li>
-				<li><a href="contacts.html" class="menu-element" title="Контактные данные">Контакты</a></li>
+				<li><a href="contacts.html" class="menu-element"  title="Контактные данные">Контакты</li>
+				<li><a href="blog.html" class="menu-element" title="НАШ БЛОГ">Наш блог</a>
+				<li><a href ="gallery.html" class="menu-element" title="Галерия">Галерия</a>
+				<li><a href="shop.html" class="menu-element" title="Магазин">Магазин</a></li>
 			</ul>
 		</nav>
 			<div class="brand">
