--- a/contacts.html
+++ b/contacts.html
@@ -22,11 +22,13 @@
 			<nav id="myTopnav">
 				<img src="image/computer.png" alt="Логотип сайта">
 			<ul class="menu">
-			<li><a href="index.html" class="menu-element" data-link="top" title="На главную">Главная</a></li>
-			<li><a href="#services" class="menu-element" data-link="services" title="Общая информация">Общее</a></li>
-			<li><a href="#portfolio" class="menu-element" data-link="portfolio" title="В галерею">Галерея</a></li>
-			<li><a href="contacts.html" class="menu-element"  title="Контактные данные">Контакты</a></li>
-			<li><a href="blog.html" class="menu-element" title="НАШ БЛОГ">НАШ БЛОГ</a></li>
+				<li><a href="index.html" class="menu-element" data-link="top" title="На главную">Главная</a></li>
+				<li><a href="#services" class="menu-element" data-link="services" title="Общая информация">Общее</a></li>
+				<li><a href="#portfolio" class="menu-element" data-link="portfolio" title="В галерею">Галерея</a></li>
+				<li><a href="contacts.html" class="menu-element"  title="Контактные данные">Контакты</li>
+				<li><a href="blog.html" class="menu-element" title="НАШ БЛОГ">Наш блог</a>
+				<li><a href ="gallery.html" class="menu-element" title="Галерия">Галерия</a>
+				<li><a href="shop.html" class="menu-element" title="Магазин">Магазин</a></li>
 			</ul>
 				<div id="hamburger" class="icon ">&#9776;</div>
 			</nav>
@@ -128,10 +130,13 @@
 		<footer>
 		<nav>
 			<ul class="menu" >
-				<li><a href="index.html" class="menu-element"  title="На главную">Главная</a></li>
-				<li><a href="#services" class="menu-element" data-link="services" title="На услуги">Информация</a></li>
-				<li><a href="#portfolio" class="menu-element" data-link="portfolio" title="В галерею">Галерея</a></li>
-				<li><a href="contacts.html" class="menu-element" title="Контактные данные">Контакты</a></li>
+				<li><a href="index.html" class="menu-element" data-link="top" title="На главную">Главная</a></li>
+			<li><a href="#services" class="menu-element" data-link="services" title="Общая информация">Общее</a></li>
+			<li><a href="#portfolio" class="menu-element" data-link="portfolio" title="В галерею">Галерея</a></li>
+			<li><a href="contacts.html" class="menu-element"  title="Контактные данные">Контакты</li>
+			<li><a href="blog.html" class="menu-element" title="НАШ БЛОГ">Наш блог</a>
+			<li><a href ="gallery.html" class="menu-element" title="Галерия">Галерия</a>
+			<li><a href="shop.html" class="menu-element" title="Магазин">Магазин</a></li>
 			</ul>
 		</nav>
 			<div class="brand">
